[FIX][UI] Prevent center column from collapsing horizontally in small screens when the content is narrow (second try).

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3163,7 +3163,10 @@ body:not(.fixed_width) .container {
   word-wrap: break-word; }
 
 @media (max-width: 768px) {
-  .col-md-12 {
+  .tiki .col-md-12 {
+    flex-basis: 100%; }
+
+  .col2 .module, .col3 .module {
     flex-basis: 100%; } }
 
 legend + * {
@@ -3197,16 +3200,6 @@ body.fullscreen.tiki.navbar-padding {
   #col2 img, #col3 img {
     max-width: 100%;
     height: auto; }
-
-.panel-body ul.nav {
-  overflow: visible; }
-
-.panel-body ul.nav.collapsing {
-  overflow: hidden; }
-
-.panel.panel-nocolor, .panel-nocolor, .panel-nocolor > .panel-heading, .panel-nocolor > .panel-body, .panel-nocolor > .panel-footer {
-  border: none;
-  background: transparent; }
 
 .tiki.tiki-list_file_gallery #col1 .popover, .tiki.tiki_file_galleries #col1 .popover, .tiki.tiki_trackers #col1 .popover, .tiki .wikiplugin-trackerlist .popover {
   max-width: 50vw; }
